gccida/c0/invalidate_from_clobbers
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/invalidate_from_clobbers/src/cse.c:6874:13: error: expected identifier or '('
 struct ref = x->fld[0].rtx; 
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/invalidate_from_clobbers/src/cse.c:6875:7: error: expected expression
if (  struct ref ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/invalidate_from_clobbers/src/cse.c:6885:32: error: use of undeclared identifier 'machine_mode'
invalidate( ref->fld[0].rtx, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)ref)); 
                               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/invalidate_from_clobbers/src/cse.c:6885:47: error: expected expression
invalidate( ref->fld[0].rtx, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)ref)); 
                                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/invalidate_from_clobbers/src/cse.c:6905:34: error: use of undeclared identifier 'machine_mode'
invalidate( ref_0->fld[0].rtx, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)ref_0)); 
                                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/invalidate_from_clobbers/src/cse.c:6905:49: error: expected expression
invalidate( ref_0->fld[0].rtx, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)ref_0)); 
                                                ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/invalidate_from_clobbers/src/obj/cse.o] Error 1
